# ds-vault-py-sdk

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  lint.yml  push-release.yml  release.yml
docs/: local_sanity_check.md
src/vault/: aad.py  cache.py  client.py  crypto.py  keys.py  models.py
src/vault/providers/: kms.py  ssm.py
src/vault/repositories/: base.py  memory.py  postgres.py
tests/: conftest.py  helpers.py  test_client_ssm_envelope_e2e.py  test_ds_vault_get_secret.py  test_get_secret_with_aad.py  test_provider_ksm.py  test_repository_postgres.py  utils.py
tests/integration_tests/: ds_vault_get_secret.py  test_ds_vault_get_secret.py
