# pyproject.toml
[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsvault-sdk"
version = "1.0.0"
description = "Python SDK for DS Vault - envelope decryption"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Aider AS"}]
keywords = ["ds-vault", "envelope-encryption", "sdk", "secrets"]
dependencies = [
  "boto3>=1.40.0,<2",
  "cryptography>=46.0.0,<47",
]

[project.urls]
Homepage = "https://github.com/grasp-labs/ds-vault-python-sdk.git"
Issues = "https://github.com/grasp-labs/ds-vault-python-sdk.git/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9",
]
postgres = ["psycopg[binary]>=3.1,<4"]